Fix some text alignment problems

--- a/src/css/_reopening.scss
+++ b/src/css/_reopening.scss
@@ -152,7 +152,7 @@ cagov-reopening {
 /* Gross hacky CSS for launch day. Refactor later. */
 .safer-economy-page {
   main {
-    & div:nth-of-type(1n) {
+    & div.container-fluid:nth-of-type(1n) {
       & h1, p {
         text-align: center;
       }
@@ -160,7 +160,7 @@ cagov-reopening {
         justify-content: center !important;
       }
     }
-    & div:nth-of-type(2n) {
+    & div.container:nth-of-type(2n) {
       & p {
         font-size: 1.25rem;
       }
